feat: Add initial public website structure including main page, robots.txt, sitemap.xml, and hero video.

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DreamWeaver Travels</title>
+    <title>DreamWeaver Travels | Best Travel Agency for Custom Holiday Packages</title>
+    
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="DreamWeaver Travels offers the best international and domestic holiday packages, flight bookings, hotel services, and visa assistance. Plan your dream trip today!">
+    <meta name="keywords" content="travel agency, holiday packages, flight booking, hotel booking, visa services, international tours, domestic tours, DreamWeaver Travels">
+    <meta name="author" content="DreamWeaver Travels">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://www.dreamweavertravels.com/">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.dreamweavertravels.com/">
+    <meta property="og:title" content="DreamWeaver Travels | Best Travel Agency for Custom Holiday Packages">
+    <meta property="og:description" content="Explore the world with DreamWeaver Travels. We provide customized holiday packages, flight bookings, and visa services for your perfect vacation.">
+    <meta property="og:image" content="https://www.dreamweavertravels.com/Dreamweaverlogo2.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://www.dreamweavertravels.com/">
+    <meta property="twitter:title" content="DreamWeaver Travels | Best Travel Agency for Custom Holiday Packages">
+    <meta property="twitter:description" content="Explore the world with DreamWeaver Travels. We provide customized holiday packages, flight bookings, and visa services for your perfect vacation.">
+    <meta property="twitter:image" content="https://www.dreamweavertravels.com/Dreamweaverlogo2.png">
+
+    <!-- Structured Data (JSON-LD) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "TravelAgency",
+      "name": "DreamWeaver Travels",
+      "image": "https://www.dreamweavertravels.com/Dreamweaverlogo2.png",
+      "description": "DreamWeaver Travels offers the best international and domestic holiday packages, flight bookings, hotel services, and visa assistance.",
+      "url": "https://www.dreamweavertravels.com/",
+      "telephone": "+918448665087",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Jaina Tower II, 204, District Centre, Janakpuri",
+        "addressLocality": "New Delhi",
+        "addressRegion": "Delhi",
+        "postalCode": "110058",
+        "addressCountry": "IN"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": 28.6289,
+        "longitude": 77.0793
+      },
+      "openingHoursSpecification": {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": [
+          "Monday",
+          "Tuesday",
+          "Wednesday",
+          "Thursday",
+          "Friday",
+          "Saturday"
+        ],
+        "opens": "10:00",
+        "closes": "19:00"
+      },
+      "sameAs": [
+        "https://www.instagram.com/dreamweaver_travels?igsh=ZXo3MGYwb2cwMDl3",
+        "https://www.linkedin.com/company/dreamweaver-travels/"
+      ]
+    }
+    </script>
+
     <link rel="stylesheet" href="styles.css">
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -92,23 +157,23 @@
         <h2>Our Airline Partners</h2>
         <div class="airlines-slider">
             <div class="airlines-track">
-                <div class="airline-logo"><img src="spicejet-logo.png" alt="Airline 1"></div>
-                <div class="airline-logo"><img src="goair-logo.png" alt="Airline 2"></div>
-                <div class="airline-logo"><img src="indigo-logo.png" alt="Airline 3"></div>
-                <div class="airline-logo"><img src="akasa-logo.jpg" alt="Airline 4"></div>
-                <div class="airline-logo"><img src="Star_Air_Logo.png" alt="Airline 5"></div>
-                <div class="airline-logo"><img src="airindia-logo.png" alt="Airline 6"></div>
-                <div class="airline-logo"><img src="Vistara_2021_logo.jpg" alt="Airline 7"></div>
+                <div class="airline-logo"><img src="spicejet-logo.png" alt="SpiceJet Airlines Logo"></div>
+                <div class="airline-logo"><img src="goair-logo.png" alt="GoAir Airlines Logo"></div>
+                <div class="airline-logo"><img src="indigo-logo.png" alt="IndiGo Airlines Logo"></div>
+                <div class="airline-logo"><img src="akasa-logo.jpg" alt="Akasa Air Logo"></div>
+                <div class="airline-logo"><img src="Star_Air_Logo.png" alt="Star Air Logo"></div>
+                <div class="airline-logo"><img src="airindia-logo.png" alt="Air India Logo"></div>
+                <div class="airline-logo"><img src="Vistara_2021_logo.jpg" alt="Vistara Airlines Logo"></div>
                 <!--<div class="airline-logo"><img src="airline8.png" alt="Airline 8"></div> -->
                 <!-- Duplicate for infinite effect -->
-                <div class="airline-logo"><img src="spicejet-logo.png" alt="Airline 1"></div>
-                <div class="airline-logo"><img src="goair-logo.png" alt="Airline 2"></div>
-                <div class="airline-logo"><img src="indigo-logo.png" alt="Airline 3"></div>
-                <div class="airline-logo"><img src="akasa-logo.jpg" alt="Airline 4"></div>
-                <div class="airline-logo"><img src="Star_Air_Logo.png" alt="Airline 5"></div>
-                <div class="airline-logo"><img src="airindia-logo.png" alt="Airline 6"></div>
-                <div class="airline-logo"><img src="Vistara_2021_logo.jpg" alt="Airline 7"></div>
-               <!-- <div class="airline-logo"><img src="airline8.png" alt="Airline 8"></div>-->
+                <div class="airline-logo"><img src="spicejet-logo.png" alt="SpiceJet Airlines Logo"></div>
+                <div class="airline-logo"><img src="goair-logo.png" alt="GoAir Airlines Logo"></div>
+                <div class="airline-logo"><img src="indigo-logo.png" alt="IndiGo Airlines Logo"></div>
+                <div class="airline-logo"><img src="akasa-logo.jpg" alt="Akasa Air Logo"></div>
+                <div class="airline-logo"><img src="Star_Air_Logo.png" alt="Star Air Logo"></div>
+                <div class="airline-logo"><img src="airindia-logo.png" alt="Air India Logo"></div>
+                <div class="airline-logo"><img src="Vistara_2021_logo.jpg" alt="Vistara Airlines Logo"></div>
+                <!-- <div class="airline-logo"><img src="airline8.png" alt="Airline 8"></div>-->
             </div>
         </div>
     </section>
